<resources>

    <string name="app_name">Tarokk</string>
    <string name="client_app_name">Tarokk client</string>
    <string name="server_app_name">Tarokk server</string>
    <string name="name">Name</string>
    <string name="connect">Connect</string>
    <string name="ip">IP address</string>
    <string name="port">Port number</string>
    <string name="server_start">Start server</string>
    <string name="server_stop">Stop server</string>
    
    <string name="loginfail_user_not_found">Ki vagy te szerencsétlen???</string>
    <string name="loginfail_invalid_password">Helytelen jelszó</string>
    <string name="loginfail_server_full">A szerver tele van</string>
    <string name="loginfail_already_logged_in">Ez a játékos már bejelentkezett a játékba</string>
    <string name="loginfail_connection_error">Csatlakozási hiba</string>
    
    <string name="ok">OK</string>
    <string name="throw_cards">Bedob</string>
    <string name="back">Vissza</string>
    <string name="announce">Bemond</string>
    
    <string name="turn_bid">Licitálás</string>
    <string name="turn_call">Hívás</string>
    <string name="turn_announce">Bemondások</string>
    
    <string name="message_throw_cards">bedobta a lapjait</string>
    <string name="press_ok">Nyomj OK-t a folyatatáshoz</string>
    <string name="message_bid">licitált</string>
    <string name="message_skart_tarock">tarokkot fektetett</string>
    <string name="message_call">hívott</string>
    <string name="message_announce">bemondta</string>
    
    <string name="bid3">3</string>
    <string name="bid2">2</string>
    <string name="bid1">1</string>
    <string name="bid0">Szóló</string>
    <string name="bid_passz">Passz</string>
    
    <string-array name="suit_array">
        <item>Kőr</item>
        <item>Káró</item>
        <item>Pikk</item>
        <item>Treff</item>
    </string-array>
    
    <string-array name="suitcard_value_array">
        <item>Ász</item>
        <item>Botos</item>
        <item>Lovas</item>
        <item>Dáma</item>
        <item>Király</item>
    </string-array>
    
    <string-array name="tarokk_array">
	    <item>Pagát</item>
	    <item>Sas</item>
	    <item>Hármas tarokk</item>
	    <item>Négyes tarokk</item>
	    <item>Ötös tarokk</item>
	    <item>Hatos tarokk</item>
	    <item>Hetes tarokk</item>
	    <item>Nyolcas tarokk</item>
	    <item>Kilences tarokk</item>
	    <item>Tizes tarokk</item>
	    <item>Tizenegyes tarokk</item>
	    <item>Tizenkettes tarokk</item>
	    <item>Tizenhármas tarokk</item>
	    <item>Tizennégyes tarokk</item>
	    <item>Tizenötös tarokk</item>
	    <item>Tizenhatos tarokk</item>
	    <item>Tizenhetes tarokk</item>
	    <item>Tizennyolcas tarokk</item>
	    <item>Tizenkilences tarokk</item>
	    <item>Húszas tarokk</item>
	    <item>Huszonegy</item>
	    <item>Skíz</item>
    </string-array>
    
    <string-array name="round_array">
        <item>Fácán</item>
        <item></item>
        <item></item>
        <item></item>
        <item>Centrum</item>
        <item>Kismadár</item>
        <item>Nagymadár</item>
        <item>Uhu</item>
        <item>Ultimó</item>
    </string-array>
    
    <string-array name="contra_array">
        <item></item>
        <item>Kontra</item>
        <item>Rekontra</item>
        <item>Szubkontra</item>
        <item>Hirskontra</item>
        <item>Mordkontra</item>
        <item>Fedák Sári</item>
    </string-array>
    
    <string name="silent">Csendes</string>
    <string name="passz">Passz</string>
    
    <string name="jatek">Játék</string>
    <string name="hkp">Hivatalból kontra parti</string>
    <string name="trull">Trull</string>
    <string name="xxiFogas">XXI fogás</string>
    <string name="banda">banda</string>
    <string name="negykiraly">Négykirály</string>
    <string name="dupla">Dupla</string>
    <string name="szinesites">Szinesítés</string>
    <string name="volat">Volát</string>
    <string name="hosszuDupla">Hosszú dupla</string>
    <string name="nyolctarokk">Nyolc tarokk</string>
    <string name="kilenctarokk">Kilenc tarokk</string>
    <string name="kiralyultimo">Színtelen király ultimó</string>
    <string name="ketkiralyok">Kétkirályok játéka</string>
    <string name="haromkiralyok">Háromkirályok játéka</string>
    <string name="zaroparos">Zárópáros</string>
    <string name="kisszincsalad">kisszíncsalád</string>
    <string name="nagyszincsalad">nagyszíncsalád</string>
    <string name="pagatfacan">Pagátfácán</string>
    <string name="sasfacan">Sasfácán</string>
    
    <string name="statictics_self">Saját figurák</string>
    <string name="statictics_opponent">Ellenfél figurái</string>
    <string name="statictics_points">Pont</string>
    <string name="statictics_sum">Összesen:</string>
    
    <string-array name="ultimo_type_array">
        <item>Pagát</item>
        <item>Sas</item>
        <item>Huszonegy</item>
        <item>Király</item>
        <item>Dáma</item>
        <item>Lovas</item>
        <item>Botos</item>
        <item>Ász</item>
        <item>Kisszíncsalád</item>
        <item>Nagyszíncsalád</item>
	</string-array>
    
    <string-array name="ultimo_suit_array">
        <item>Kőr</item>
        <item>Káró</item>
        <item>Pikk</item>
        <item>Treff</item>
	</string-array>
    
    <string-array name="ultimo_round_array">
        <item>Ultimó</item>
        <item>Uhu</item>
        <item>Nagymadár</item>
        <item>Kismadár</item>
    </string-array>
    
</resources>
