<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tisza.tarock.MainActivity"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
       
    <EditText
        android:id="@+id/name_field"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name"
	    />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        
        <EditText
	        android:id="@+id/host_field"
            android:layout_width="0dp"
	        android:layout_height="wrap_content"
		    android:layout_weight="0.5"
	        android:hint="@string/ip"
            />
        
	    <EditText
	        android:id="@+id/port_field"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.5"
		    android:hint="@string/port"
		    android:inputType="number"
		    />
        
    </LinearLayout>
    
    <Button
        android:id="@+id/start_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/connect"
        />

</LinearLayout>
