<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tisza.tarock.MainActivity"
    
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
       
    <EditText
        android:id="@+id/port_field_server"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/port"
	    android:inputType="number"
	    />
        
    <EditText
        android:id="@+id/name0_field"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name"
	    />
        
    <EditText
        android:id="@+id/name1_field"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name"
	    />
            
    <EditText
        android:id="@+id/name2_field"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name"
	    />
            
    <EditText
        android:id="@+id/name3_field"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/name"
	    />
    
    <Button
        android:id="@+id/start_button"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/server_start"
        />

</LinearLayout>
